maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: not found: value cpt
	setIndication(coordBiscuit(0),coordBiscuit(1),cpt)
                                                      ^